# StableDiffusionDestopApp

./: .gitignore  LICENSE.txt  README.md  StableDiffusionDestopApp.sln  pyproject.toml
backend/: README.md  launch.py  launch_webui_backend.py  requirements.txt  requirements_versions.txt  requirements_webui.txt
installer/: README_installer.md  build_embedded_python.py  build_installer.ps1  build_linux_binaries.sh  install_linux.sh  installer.iss  installer_embedded.iss  launch_backend_embedded.bat  write_dmg.sh
myApp/: .gitignore  App.axaml  App.axaml.cs  BackendManager.cs  ConfigurationWindowInfo.axaml  ConfigurationWindowInfo.axaml.cs  ControlsWindowInfo.axaml  ControlsWindowInfo.axaml.cs  DashboardView.axaml  DashboardView.axaml.cs  GalleryView.axaml  GalleryView.axaml.cs  Image2ImageInfoWindow.axaml  Image2ImageInfoWindow.axaml.cs  IntroWindow.axaml  IntroWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ModeSelectorWindow.axaml  ModeSelectorWindow.axaml.cs  ModelsView.axaml  ModelsView.axaml.cs  Program.cs  PromptWindowInfo.axaml  PromptWindowInfo.axaml.cs  RemoteAddressDialog.axaml  RemoteAddressDialog.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  TranslationLayerView.axaml  TranslationLayerView.axaml.cs  app.manifest  models.json  myApp.csproj
myApp.Tests/: HeadlessAppFixture.cs  README.md  TESTING_SUMMARY.md  TestBase.cs  TestConfiguration.cs  TestRunner.cs  myApp.Tests.csproj  run_tests.bat  run_tests.sh  run_tests_with_timeout.bat  run_tests_with_timeout.sh  xunit.runner.json
setup_scripts/: launch_sdapi_server.bat  launch_sdapi_server.sh  (+5 more)
(+68 files in other folders)
