
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "translation_layer"
version = "0.1.0"
description = "Gradio-to-Avalonia translation layer for Stable Diffusion backend"
authors = [{ name = "Spicy Banana Organization"}]
license = { text = "GNU GPL v 3.0" }
requires-python = ">=3.9"

# These are your dependencies, if any (e.g., fastapi)
dependencies = [
    "fastapi==0.104.1",
]

[tool.setuptools]
packages = ["translation_layer"]
